Docker and vagrant are now working!